--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>Golf Trivia Game</title>
 </head>
 <body>
-    <h1>Totally Trivial Trivia!</h1>
-    <div id=Questions></div>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <Header><h1>Totally Trivial Trivia!</h1></Header>
+    <div id="quiz"></div>
+
 </body>
 </html>
